syntax = "proto3";

package model;

import "proto/model/effect.proto";
import "proto/model/enums.proto";
import "proto/model/location.proto";

option go_package = "github.com/user/repo/proto/model";

// Card 表示一张行动卡。
message Card {
  string id = 1;
  string name = 2;
  CardType card_type = 3;
  PlayerRole owner_role = 4;
  string target_type = 5;
  Effect effect = 6;
  bool once_per_loop = 7;
  bool used_this_loop = 8;
  string target_character_id = 9;
  LocationType target_location = 10;
}

message CardList {
  repeated Card cards = 1;
}